Fixes eslint violations
Change-Id: I45fc49a4420d239a226e26255acaa5e467983ff0

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,5 +4,11 @@
 		"wikimedia/client-es6",
 		"wikimedia/jquery",
 		"wikimedia/mediawiki"
-	]
+	],
+	"rules": {
+		"no-implicit-globals": "off",
+		"mediawiki/class-doc": "off",
+		"compat/compat": "off",
+		"no-jquery/no-global-selector": "off"
+	}
 }
