fixes stylelint complaints
Change-Id: I7c42d5ddcc4bcf18116fa53411b4a9db0ac4a5c0

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,8 @@
 {
 	"extends": "stylelint-config-wikimedia",
+	"reportNeedlessDisables": true,
 	"rules": {
+		"unit-disallowed-list": null,
 		"selector-max-id": null
 	}
 }
